--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,7 @@
     "jquery": "^3.1.1",
     "bootstrap": "^3.3.7",
     "angular": "^1.5.8",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "angular-mocks": "^1.5.9"
   }
 }
- 
-
-
